# nephrotox-ml

./: .gitignore  LICENSE  README.md  batch_train.sh  pyproject.toml
input/: README.md
scripts/: compute_shap.py  compute_shap_test.py  gen_fig3_data.py  plot_shap.py  uq_prototype.py
scripts/dl/: batch_train.sh  compare_all_models.sh  parallel_train_all.sh  train_baselines.py  train_multimodal_best.py  train_multimodal_full.py  tune_multimodal.py
src/: config.py  data_loader.py  metrics.py  train.py  tuning.py  utils.py
src/dl/: __init__.py  callbacks.py  config.py  data_loader.py  featurizers.py  metrics.py  models.py  models_dgllife.py  parallel_tune.py  train.py  trainer_chemprop.py  trainer_dgllife.py  tuning.py  utils.py
src/multimodal/: __init__.py  config.py  data_loader.py  featurizers.py  graph_utils.py  models.py  train.py  utils.py
