[project]
name = "nephrotox-ml"
version = "0.2.0"
description = "Machine learning and deep learning pipeline for nephrotoxicity prediction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.9.4",
    "numpy>=1.24",
    "optuna>=3.0.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "rdkit>=2023.03",
    "pubchempy>=1.0.4",
    "requests>=2.32.5",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dl = [
    "torch>=2.0,<2.4",
    "deepchem[torch]>=2.7.0",
    "dgl>=1.1.0,<2.0",
    "dgllife>=0.2.9",
    "torchdata<0.11.0",
    "chemprop>=2.0.0",
    "lightning>=2.0",
]
multimodal = [
    "nephrotox-ml[dl]",
    "transformers>=4.30",
]
dev = ["pytest>=7.0", "black>=23.0"]

[project.urls]
Homepage = "https://github.com/jixing475/nephrotox-ml"
Paper = "https://doi.org/PENDING"
